fix: 'add-to-cart' button does not fit the screen

--- a/cardapio/style.css
+++ b/cardapio/style.css
@@ -164,7 +164,6 @@ button {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  animation: pulse 1s infinite;
 }
 
 @keyframes pulse {
@@ -304,6 +303,19 @@ button {
   font-size: 16px;
   cursor: pointer;
   margin: 5px;
+  animation: pulse 1s ease-in-out forwards;
+  transition: background-color 0.5s ease, transform 0.5s ease;
+  white-space: nowrap;
+}
+/* Estilos específicos para a versão mobile */
+@media (max-width: 320px) {
+  .menu-item-heading {
+    flex-direction: column;
+  }
+}
+
+.add-to-cart-btn:hover {
+  transform: scale(1.1);
 }
 
 /* Estilo para a aba lateral */
